--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -38,8 +38,8 @@ hr.dashed {
   grid-template-columns: auto auto ;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-top: 10px;
   justify-content: center;
 }
@@ -158,15 +158,16 @@ hr.dashed {
 .menu-buttons {
   display: grid;
   grid-template-columns: auto auto ;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  padding: 20px;
+  grid-column-gap: 100px;
+  grid-row-gap: 10px;
+  
+  padding-top: 10px;
   justify-content: center;
 }
 .menu-button {
   width: 100%;
   border: 1px solid #010008;
-  padding: 20px;
+  padding: 10px;
   border-radius: 5px;
   cursor: pointer;
   background-color: #d2d2d2;
