--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -158,16 +158,20 @@ hr.dashed {
 .menu-buttons {
   display: grid;
   grid-template-columns: auto auto ;
-  grid-column-gap: 100px;
+  grid-column-gap: 10px;
   grid-row-gap: 10px;
-  
+  padding-left: 30px;
+  padding-right: 30px;
   padding-top: 10px;
   justify-content: center;
 }
 .menu-button {
   width: 100%;
   border: 1px solid #010008;
-  padding: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   border-radius: 5px;
   cursor: pointer;
   background-color: #d2d2d2;
