--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@ hr.dashed {
 }
 .product-card {
     width: 180px;
-    padding: 10px;
+    padding: 5px;
     border-radius: 5px;
     cursor: pointer;
     background-color: #d2d2d2;
@@ -181,7 +181,9 @@ form {
   #product-cards {
     grid-template-columns: auto auto;
   }
-  
+  .product-card {
+    width: 170px;
+}
   .topnav input[type=text] {
     font-size: 25px;
   }
