--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -225,4 +225,9 @@ hr.dashed {
   padding-top: 16px;
   display: block;
 }
+@media screen and (max-width: 400px) {
+  .product-card {
+    width: 170px;
+}
+}
 
