--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -44,7 +44,7 @@ hr.dashed {
   justify-content: center;
 }
 .product-card {
-    width: 170px;
+    width: 100%;
     padding: 5px;
     border-radius: 5px;
     cursor: pointer;
@@ -226,8 +226,9 @@ hr.dashed {
   display: block;
 }
 @media screen and (max-width: 380px) {
-  .product-card {
-    width: 160px;
-}
+  #product-cards {
+    grid-template-columns: auto;
+  }
+
 }
 
