--- a/static/style.css
+++ b/static/style.css
@@ -47,7 +47,7 @@ hr.dashed {
   justify-content: center;
 }
 .product-card {
-    width: 200px;
+    width: 100%;
     padding: 5px;
     border-radius: 5px;
     cursor: pointer;
@@ -181,9 +181,6 @@ form {
   #product-cards {
     grid-template-columns: auto auto;
   }
-  .product-card {
-    width: 180px;
-}
   .topnav input[type=text] {
     font-size: 25px;
   }
