--- a/static/style.css
+++ b/static/style.css
@@ -47,7 +47,7 @@ hr.dashed {
   justify-content: center;
 }
 .product-card {
-    width: 100%;
+    width: 200px;
     padding: 5px;
     border-radius: 5px;
     cursor: pointer;
@@ -180,6 +180,9 @@ form {
 @media screen and (max-width: 720px) {
   #product-cards {
     grid-template-columns: auto auto;
+  }
+  .product-card {
+    width: 180px;
   }
   .topnav input[type=text] {
     font-size: 25px;
