--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -42,6 +42,7 @@ hr.dashed {
   padding-right: 10px;
   padding-top: 10px;
   justify-content: center;
+  width: 100%;
 }
 .product-card {
     width: 180px;
