--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -35,7 +35,7 @@ hr.dashed {
 }
 #product-cards {
   display: grid;
-  grid-template-columns: auto auto ;
+  grid-template-columns: auto auto auto;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   padding-left: 10px;
