--- a/static/style.css
+++ b/static/style.css
@@ -45,9 +45,10 @@ hr.dashed {
   padding-right: 10px;
   padding-top: 10px;
   justify-content: center;
+  width: 100%;
 }
 .product-card {
-    width: 200px;
+    
     padding: 5px;
     border-radius: 5px;
     cursor: pointer;
@@ -181,9 +182,7 @@ form {
   #product-cards {
     grid-template-columns: auto auto;
   }
-  .product-card {
-    width: 180px;
-  }
+  
   .topnav input[type=text] {
     font-size: 25px;
   }
