--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -171,10 +171,7 @@ hr.dashed {
 .menu-button {
   
   border: 1px solid #010008;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 30px;
   border-radius: 5px;
   cursor: pointer;
   background-color: #d2d2d2;
