--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -169,9 +169,9 @@ hr.dashed {
   width: 100%;
 }
 .menu-button {
-  
+  width: 100px;
   border: 1px solid #010008;
-  padding: 10px;
+  padding: 15px;
   border-radius: 5px;
   cursor: pointer;
   background-color: #d2d2d2;
