--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -160,11 +160,8 @@ hr.dashed {
 .menu-buttons {
   display: grid;
   grid-template-columns: auto auto ;
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 10px;
+  grid-gap: 10px;
+  padding: 10px;
   justify-content: center;
   width: 100%;
 }
