--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -175,12 +175,10 @@ hr.dashed {
   color: #000000;
 }
 .cart-buttons {
-  display: grid;
-  grid-template-columns: auto ;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
+  
+  padding: 10px;
   width: 100%;
+  justify-content: center;
 }
 .cart-button {
   
