--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -175,7 +175,8 @@ hr.dashed {
   color: #000000;
 }
 .cart-buttons {
-  
+  display: grid;
+  grid-template-columns: auto ;
   padding: 10px;
   width: 100%;
   justify-content: center;
