--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -160,9 +160,9 @@ hr.dashed {
 .menu-buttons {
   display: grid;
   grid-template-columns: auto auto ;
-  grid-gap: 10px;
   padding: 10px;
   width: 100%;
+  grid-gap: 10px;
 }
 .menu-button {
   
@@ -174,7 +174,8 @@ hr.dashed {
   color: #000000;
 }
 .cart-buttons {
-  
+  display: grid;
+  grid-template-columns: auto ;
   padding: 10px;
   width: 100%;
   
