--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -15,12 +15,9 @@ hr.dashed {
 .filter-buttons {
   display: grid;
   grid-template-columns: auto auto auto;
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 10px;
+  padding: 10px;
   width: 100%;
+  grid-gap: 10px;
 }
 .filter-button {
   border: 1px solid #000000;
