--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -34,13 +34,9 @@ hr.dashed {
 #product-cards {
   display: grid;
   grid-template-columns: auto auto;
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  justify-content: center;
+  padding: 10px;
   width: 100%;
+  grid-gap: 10px;
 }
 .product-card {
     
