--- a/static/style.css
+++ b/static/style.css
@@ -39,12 +39,8 @@ hr.dashed {
 #product-cards {
   display: grid;
   grid-template-columns: auto auto auto auto auto auto;
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  justify-content: center;
+  padding: 10px;
+  grid-gap: 10px;
   width: 100%;
 }
 .product-card {
