--- a/static/style.css
+++ b/static/style.css
@@ -18,11 +18,9 @@ hr.dashed {
 .filter-buttons {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 10px;
+  padding: 10px;
+  width: 100%;
+  grid-gap: 10px;
 }
 .filter-button {
   border: 1px solid #000000;
@@ -131,7 +129,9 @@ form {
 .cart-buttons {
   display: grid;
   grid-template-columns: auto ;
-  padding: 20px;
+  padding: 10px;
+  width: 100%;
+  grid-gap: 10px;
 }
 .cart-button {
   
