--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -39,7 +39,7 @@ hr.dashed {
   grid-gap: 10px;
 }
 .product-card {
-    
+    max-width: fit-content;
     padding: 5px;
     border-radius: 5px;
     cursor: pointer;
