--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,6 @@ hr.dashed {
   width: 100%;
 }
 .product-card {
-    
     padding: 5px;
     border-radius: 5px;
     cursor: pointer;
@@ -55,13 +54,12 @@ hr.dashed {
     flex-direction: column;
 }
 .image-container img {
-  max-width: 100%;
-    object-fit: contain;
-    height: 10em;
+  max-width: 150px;
+  max-height: 200px;
 }
 .container {
-  padding-top: 1em;
-  color: #110f29;
+  max-width: 160px;
+  max-height: 300px;
 }
 .hide {
   display: none;
