--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -39,10 +39,11 @@ hr.dashed {
   grid-gap: 10px;
 }
 .product-card {
-    padding: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: #d2d2d2;
+  width: 180px;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #d2d2d2;
 }
 .image-container {
     display: flex;
