--- a/static/style.css
+++ b/static/style.css
@@ -43,7 +43,7 @@ hr.dashed {
   
 }
 .product-card {
-  width: 200px;
+  width: 180px;
   padding: 5px;
   border-radius: 5px;
   cursor: pointer;
@@ -58,6 +58,7 @@ hr.dashed {
 .image-container img {
   max-width: 150px;
   max-height: 200px;
+  object-fit: contain;
 }
 .container {
   max-width: 160px;
