--- a/static/style.css
+++ b/static/style.css
@@ -57,7 +57,7 @@ hr.dashed {
 }
 .image-container img {
   max-width: 150px;
-  max-height: 200px;
+  height: 200px;
   object-fit: contain;
 }
 .container {
