--- a/static/style.css
+++ b/static/style.css
@@ -55,7 +55,11 @@ hr.dashed {
     align-items: center;
     flex-direction: column;
 }
-
+.image-container img {
+  max-width: 150px;
+  height: 200px;
+  
+}
 .container {
   max-width: 160px;
   max-height: 300px;
