--- a/static/style.css
+++ b/static/style.css
@@ -55,10 +55,20 @@ hr.dashed {
     align-items: center;
     flex-direction: column;
 }
-
+.image-container img {
+  max-width: 100%;
+    object-fit: contain;
+    height: 10em;
+}
 .container {
   max-width: 160px;
   max-height: 300px;
+}
+.rating-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .hide {
   display: none;
