--- a/static/style.css
+++ b/static/style.css
@@ -19,7 +19,7 @@ hr.dashed {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
   padding: 10px;
-  
+  justify-content: center;
   grid-gap: 10px;
 }
 .filter-button {
