--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -18,6 +18,7 @@ hr.dashed {
   padding: 10px;
   width: 100%;
   grid-gap: 10px;
+  justify-content: center;
 }
 .filter-button {
   border: 1px solid #000000;
@@ -37,6 +38,7 @@ hr.dashed {
   padding: 10px;
   width: 100%;
   grid-gap: 10px;
+  justify-content: center;
 }
 .product-card {
   width: 170px;
@@ -155,6 +157,7 @@ hr.dashed {
   padding: 10px;
   width: 100%;
   grid-gap: 10px;
+  justify-content: center;
 }
 .menu-button {
   
