--- a/static/style-mobile.css
+++ b/static/style-mobile.css
@@ -16,7 +16,7 @@ hr.dashed {
   display: grid;
   grid-template-columns: auto auto auto;
   padding: 10px;
-  width: 100%;
+  
   grid-gap: 10px;
   justify-content: center;
 }
@@ -36,7 +36,7 @@ hr.dashed {
   display: grid;
   grid-template-columns: auto auto;
   padding: 10px;
-  width: 100%;
+  
   grid-gap: 10px;
   justify-content: center;
 }
@@ -54,12 +54,19 @@ hr.dashed {
     flex-direction: column;
 }
 .image-container img {
-  max-width: 150px;
-  max-height: 200px;
+  width: 150px;
+  height: 200px;
+  object-fit: contain;
 }
 .container {
   max-width: 160px;
   max-height: 300px;
+}
+.rating-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .hide {
   display: none;
@@ -155,12 +162,12 @@ hr.dashed {
   display: grid;
   grid-template-columns: auto auto ;
   padding: 10px;
-  width: 100%;
+  
   grid-gap: 10px;
   justify-content: center;
 }
 .menu-button {
-  
+  width: 150px;
   border: 1px solid #010008;
   padding: 15px;
   border-radius: 5px;
@@ -169,20 +176,21 @@ hr.dashed {
   color: #000000;
 }
 .cart-buttons {
-  display: grid;
-  grid-template-columns: auto ;
-  padding: 10px;
-  width: 100%;
-  grid-gap: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-.cart-button {
-  
+.cart-buttons button {
   border-radius: 10px;
   background-color: #D2D2D2;
   color: #000000;
   cursor: pointer;
   padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
 }
+
 /* Full-width inputs */
 .login-container input[type=text], input[type=password] {
   width: 100%;
